--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,3 +1,4 @@
+<%- include("partials/header") %>
 <h1>
 	This is the campgrounds page
 </h1>
@@ -9,3 +10,5 @@
 	</div>
 	
 <% }) %>
+
+<%- include("partials/footer") %>
