--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,3 +1,4 @@
+<%- include("partials/header") %>
 <h1>
 	Landing Page
 </h1>
@@ -7,3 +8,5 @@
 </p>
 
 <a href="/campgrounds">View all campgrounds</a>
+
+<%- include("partials/footer") %>
