--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <%- include("partials/header") %>
+
 <div class="container">
 	<header class="jumbotron">
 		<div class="container">
@@ -18,6 +19,7 @@
 					<div class="caption">
 						<h4> <%= campground.name %> </h4>
 					</div>
+					<p><a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a></p>
 				</div>
 				
 			</div>
