--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header") %>
+<%- include("../partials/header") %>
 
 
 
@@ -6,7 +6,9 @@
 <img src="<%= campground.image %>">
 <p><%= campground.description %></p>
 
-
+<p>
+	<a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>
+</p>
 <% campground.comments.forEach(function(comment){ %>
 	<p>
 		<strong><%= comment.author %></strong> - <%= comment.text %>
@@ -15,4 +17,4 @@
 
 
 
-<%- include("partials/footer") %>
+<%- include("../partials/footer") %>
