--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -20,6 +20,7 @@
 					</h4>
 					<h4><a><%= campground.name %></a></h4>
 					<p><%= campground.description %></p>
+					<p><em>Created by <%= campground.author.username %></em></p>
 				</div>
 			</div>
 			<div class="well">
@@ -30,7 +31,7 @@
 				<% campground.comments.forEach(function(comment){ %>
 					<div class="row">
 						<div class="col-md-12">
-							<strong><%= comment.author %></strong>
+							<strong><%= comment.author.username %></strong>
 							<span class="pull-right">10 days ago</span>
 							<p>
 								<%= comment.text %>
