--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -16,7 +16,7 @@
 				<img class="img-responsive" src="<%= campground.image %>">
 				<div class="caption-full">
 					<h4 class="pull-right">
-						$9.00/night
+						$<%= campground.price %>/night
 					</h4>
 					<h4><a><%= campground.name %></a></h4>
 					<p><%= campground.description %></p>
